<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="accent_instruction_body">Press and hold the corresponding letter on the keyboard. For example, hold the “e” key to get the “é” option.</string>
    <string name="accent_instruction_header">&lt;b>Need to type characters like é or ñ?&lt;/b></string>
    <string name="achievement_multi_unlock_title">Achievements Unlocked!</string>
    <string name="achievement_name_clubs">Inner Circle</string>
    <string name="achievement_name_completion">Champion</string>
    <string name="achievement_name_gold_skills">Shiny</string>
    <string name="achievement_name_items">Wizard</string>
    <string name="achievement_name_perfect">Sharpshooter</string>
    <string name="achievement_name_social">Friendly</string>
    <string name="achievement_name_spending">Big Spender</string>
    <string name="achievement_name_streak">Wildfire</string>
    <string name="achievement_name_time">Overtime</string>
    <string name="achievement_name_xp">Overachiever</string>
    <string name="achievement_new">NEW</string>
    <string name="achievement_requirement_clubs_1">Join or create a Club</string>
    <string name="achievement_requirement_clubs_2">"Get to the top of your Club's leaderboard"</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_create_a_profile">Create a Profile</string>
    <string name="action_delete">Delete</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_get_tinycards">Get Tinycards</string>
    <string name="action_logout">Log out</string>
    <string name="action_ok">OK</string>
    <string name="action_report">Report</string>
    <string name="action_settings">Settings</string>
    <string name="club_public_desc">Duolingo will recommend your Club to others</string>
    <string name="club_public_title">Public</string>
    <string name="clubs_description_hint">Tell us what your Club is all about</string>
    <string name="clubs_name_hint">Type here</string>
    <string name="create">Create</string>
    <string name="describe_club">Describe your Club</string>
    <string name="discuss_sentence_clutter">Stop the clutter! Please do not report mistakes here and read the comments below before posting.</string>
    <string name="discuss_sentence_locked">This discussion is locked.</string>
    <string name="discuss_sentence_post_button">POST</string>
    <string name="discuss_sentence_title">Leave a comment</string>
    <string name="enter_club_code">Join by Club code</string>
    <string name="enter_club_code_hint">Enter code</string>
    <string name="first_mistake_text">You need health to complete lessons. If it runs out, practice weak skills to earn it back!</string>
    <string name="first_mistake_title">First mistake - no big deal!</string>
    <string name="join">JOIN</string>
    <string name="keep_going">KEEP GOING</string>
    <string name="lesson_coach">Motivational messages</string>
    <string name="menu_action_sign_in">Sign in</string>
    <string name="name_club">Name your Club</string>
    <string name="no_thanks">&lt;b>NO THANKS&lt;/b></string>
    <string name="not_now">NOT NOW</string>
    <string name="out_of_health_text">Mistakes are our best teachers. Have a refill on us to keep going!</string>
    <string name="out_of_health_title">You ran out of health!</string>
    <string name="placement_test_explanation">It takes about 5 minutes, and adapts to your level by getting harder or easier based on your answers.</string>
    <string name="placement_test_explanation_title">&lt;b>Take a test to jump ahead&lt;/b></string>
    <string name="refill_for_free">REFILL FOR FREE</string>
    <string name="select_badge">Select a Badge</string>
    <string name="setting_clubs_activity">Club Activity</string>
    <string name="setting_email">Email</string>
    <string name="setting_listening">Listening exercises</string>
    <string name="setting_name">Name</string>
    <string name="setting_new_follower">New follower</string>
    <string name="setting_notification_time">Reminder time</string>
    <string name="setting_passed">Someone passes me</string>
    <string name="setting_password">Password</string>
    <string name="setting_photo">Photo</string>
    <string name="setting_practice_reminder">Practice reminder</string>
    <string name="setting_speaking">Speaking exercises</string>
    <string name="setting_username">Username</string>
    <string name="sound_effects">Sound effects</string>
    <string name="start_placement">&lt;b>START&lt;/b></string>
    <string name="tinycards_description">Your entire Duolingo vocabulary, now in flashcard form.</string>
    <string name="title_accessibility">ACCESSIBILITY</string>
    <string name="title_activity_schools">Progress Sharing</string>
    <string name="title_daily_goal">DAILY GOAL</string>
    <string name="title_general">GENERAL</string>
    <string name="title_notifications">NOTIFICATIONS</string>
    <string name="title_your_profile">YOUR PROFILE</string>
    <string name="view_members_button">Members</string>
    <string name="pref_key_avatar">pref_key_avatar</string>
    <string name="pref_key_cat_notifications">pref_key_cat_notifications</string>
    <string name="pref_key_clubs">pref_key_clubs</string>
    <string name="pref_key_daily_goal">pref_key_daily_goal</string>
    <string name="pref_key_email">pref_key_email</string>
    <string name="pref_key_follow">pref_key_follow</string>
    <string name="pref_key_fullname">pref_key_fullname</string>
    <string name="pref_key_lesson_coach">pref_key_lesson_coach</string>
    <string name="pref_key_listen">pref_key_listen</string>
    <string name="pref_key_microphone">pref_key_microphone</string>
    <string name="pref_key_notification_time">pref_key_notification_time</string>
    <string name="pref_key_passed">pref_key_passed</string>
    <string name="pref_key_password">pref_key_password</string>
    <string name="pref_key_practice">pref_key_practice</string>
    <string name="pref_key_sound">pref_key_sound</string>
    <string name="pref_key_username">pref_key_username</string>
</resources>