<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.duolingo.typeface.widget.DuoTextView android:textAppearance="@style/LessonEndTitle" android:textStyle="bold" android:gravity="center" android:id="@id/placement_test_explaination_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/placement_test_explanation_title" />
    <com.duolingo.view.DuoSvgImageView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="20.0dip" android:scaleType="fitCenter" android:layout_weight="1.0" app:svgSrc="@raw/duo_grad" />
    <com.duolingo.typeface.widget.DuoTextView android:textAppearance="@style/LessonEndTitle" android:textSize="@dimen/medium_font_size" android:gravity="center" android:layout_gravity="center" android:id="@id/placement_test_explanation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/placement_test_explanation" />
    <com.duolingo.typeface.widget.DuoTextView android:textColor="@color/btn_light_text_colors" android:id="@id/start_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/vertical_button_spacing" android:text="@string/start_placement" app:buttonColor="@color/green_leaf" style="@style/App_ButtonStyle" />
    <com.duolingo.typeface.widget.DuoTextView android:id="@id/cancel_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/no_thanks" style="@style/App_ButtonFlat" />
</LinearLayout>