<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="top" android:orientation="vertical" android:background="@color/new_gray_lightest" android:padding="@dimen/enormous_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.duolingo.view.DuoSvgImageView android:layout_gravity="start" android:id="@id/button_close" android:layout_width="20.0dip" android:layout_height="20.0dip" app:svgSrc="@raw/button_close" />
    <com.duolingo.typeface.widget.DuoTextView android:textSize="@dimen/large_font_size" android:gravity="center" android:id="@id/header" android:layout_marginTop="@dimen/gigantic_margin" android:layout_marginBottom="80.0dip" android:text="@string/enter_club_code" style="@style/ClubsHeading" />
    <com.duolingo.typeface.widget.DuoEditText android:id="@id/enter_club_code" android:background="@color/transparent" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:hint="@string/enter_club_code_hint" android:inputType="textNoSuggestions" style="@android:style/Widget.EditText" />
    <View android:background="@drawable/list_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="@dimen/small_margin" />
    <com.duolingo.typeface.widget.DuoTextView android:textColor="@color/red" android:id="@id/error_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/medium_margin" />
    <com.duolingo.typeface.widget.DuoTextView android:enabled="false" android:textColor="@color/btn_light_text_colors" android:id="@id/join_club" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/large_margin" android:text="@string/join" app:buttonColor="@color/blue" style="@style/App_ButtonStyle" />
</LinearLayout>